<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_margin="20dp"
    tools:context=".view.TambahDataActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah_data_siswa"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/line_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/nama_siswa_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/namasiswa"
            android:gravity="center"
            android:background="@drawable/edit_tect_background"/>
        <EditText
            android:id="@+id/nim_siswa_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/nimsiswa"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@drawable/edit_tect_background"/>
        <EditText
            android:id="@+id/alamat_siswa_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/alamatsiswa"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@drawable/edit_tect_background"/>
        <EditText
            android:id="@+id/phone_siswa_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:hint="@string/phonesiswa"
            android:gravity="center"
            android:background="@drawable/edit_tect_background"/>
        <Button
            android:id="@+id/btn_add_siswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Tambah Data"
            android:textSize="16sp"
            android:backgroundTint="@color/teal_200"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</LinearLayout>