<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.EditDataActivity"
    android:layout_margin="20dp">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView
                android:id="@+id/img_back_edit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_dan_delete_data_mahasiswa"
                android:textSize="25dp"
                android:gravity="center"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/line_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:layout_margin="20dp">
        <EditText
            android:id="@+id/nama_siswa_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/namasiswa"
            android:gravity="center"
            android:background="@drawable/edit_tect_background"/>

        <EditText
            android:id="@+id/nim_siswa_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/nimsiswa"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@drawable/edit_tect_background"/>
        <EditText
            android:id="@+id/alamat_siswa_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/alamatsiswa"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@drawable/edit_tect_background"/>
        <EditText
            android:id="@+id/phone_siswa_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:hint="@string/phonesiswa"
            android:gravity="center"
            android:background="@drawable/edit_tect_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">
            <Button
                android:id="@+id/btn_edit_siswa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Data"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_200"/>
            <Button
                android:id="@+id/btn_hapus_siswa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hapus Data"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_200"/>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</LinearLayout>